# nvl

./: .gitignore  .gitmodules  .travis.yml  configure
gdb-7.7/: Makefile  config.status
gdb-7.7/.pc/: applied-patches
gdb-7.7/.pc/ppc64le.diff/gdb/: symtab.c
gdb-7.7/bfd/: Makefile  config.status  libtool
gdb-7.7/bfd/doc/: Makefile
gdb-7.7/debian/: NEWS  changelog  control  control.in  gdb-minimal.manpages  rules  sanitize-gdb.sh
gdb-7.7/debian/patches/: gdb-6.5-bz185337-resolve-tls-without-debuginfo-v2.patch  gdb-fortran-main.patch  gdb-strings.patch  linuxthreads_signal_handling.patch  ptrace-error-verbosity.patch  python-config.patch  series  solve_PATH_MAX_issue.patch
gdb-7.7/etc/: config.status
gdb-7.7/gdb/: Makefile  config.cache  config.h  config.status  configure  configure.ac  gdbarch.c  gdbarch.h  gdbarch.sh  inf-ptrace.c  infrun.c  nto-tdep.c  printcmd.c  remote.c  remote.c.orig  rs6000-tdep.c  symtab.c
gdb-7.7/gdb/.deps/: mi-main.Po  py-auto-load.Po  py-prettyprint.Po  py-value.Po  python.Po  varobj.Po
gdb-7.7/gdb/build-gnulib/: config.status
gdb-7.7/gdb/build-gnulib/import/: Makefile
gdb-7.7/gdb/doc/: Makefile
gdb-7.7/gdb/gdbserver/: Makefile  config.cache  config.status
gdb-7.7/gdb/gdbserver/build-gnulib-gdbserver/: config.status
gdb-7.7/gdb/gdbserver/build-gnulib-gdbserver/import/: Makefile
gdb-7.7/gdb/testsuite/: Makefile  config.status
gdb-7.7/intl/: Makefile  config.status
gdb-7.7/libdecnumber/: Makefile  config.status
gdb-7.7/libiberty/: Makefile  config.status
gdb-7.7/opcodes/: Makefile  config.status  libtool
gdb-7.7/readline/: Makefile  config.status
gdb-7.7/readline/doc/: Makefile
gdb-7.7/readline/examples/: Makefile
gdb-7.7/readline/shlib/: Makefile
gdb-7.7/sim/: config.status
src/guests/simple_busybox/: build.pl
src/guests/simple_busybox/config/hpcg/: Make.Kitten_MPI_Static
src/guests/simple_busybox/overlays/skel/opt/hobbes/: composition.xml  kitten_enclave.xml
src/guests/simple_busybox/overlays/skel/opt/tests/: composition  hpcg  mpi  mpi_alone
src/nvl/pisces/: build.pl  build_hobbes_image.sh
src/nvl/pisces/config/hpcg/: Make.Kitten_MPI_Static
src/nvl/pisces/config/pisces/: kitten_config  palacios_config
src/nvl/pisces/cray/static-link/: Makefile  Makefile.am  configure.ac  gni_priv.h  pmi-forward.c  pmi_util.h  xmem_list.h  xpmem_chnl_client.c  xpmem_chnl_serv.c
src/nvl/pisces/scripts/: composition  composition.xml  config_node.sh  kitten_enclave.xml  linux_guest.xml  setup_fwd.sh  start_hobbes.sh  start_hobbes2.sh
